# Stirling-PDF

./: .dockerignore  .editorconfig  .env.saas.example  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaksignore  .imgbotconfig  .pre-commit-config.yaml  .stylelintrc.json  ADDING_TOOLS.md  AGENTS.md  AUDIT_JPDFIUM_OVERLAY.md  AUDIT_REFACTOR_SUMMARY.md  CLAUDE.md  CNAME  CONTRIBUTE.md  CONTRIBUTING.md  DATABASE.md  DesktopApplicationDevelopmentGuide.md  DeveloperGuide.md  Dockerfile  Dockerfile-do  Dockerfile-fat  Dockerfile-lite  Dockerfile-ultra-lite  Dockerfile-ultralite  Dockerfile.dev  Dockerfile.fat  Dockerfile.ultra-lite  Dockerfile2  DockerfileBase  DockerfileBase-lite  Endpoint-groups.md  FILE_HISTORY_SPECIFICATION.md  FILE_SHARING.md  FRONTEND_REVOCATION_CHANGES.md  FolderScanning.md  FormFieldTest.java  (+66 more)
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/icons/: icon.icns
client-tauri/src-tauri/src/: main.rs
engine/: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  ENGINE_GUIDE.md  Makefile  package-lock.json  package.json  pyproject.toml
engine/config/: .env.example
engine/scripts/: generate_tool_models.py  setup_env.py
engine/src/: ai_generation.py  ai_logging.py  analytics.py  app.py  briefs.py  chat_router.py  config.py  document_types.py  file_processing_agent.py  header_styles.py  html_pdf_utils.py  html_to_pdf.mjs  html_utils.py  java_client.py  langchain_utils.py  llm_utils.py  pdf_generator.py  pdf_text_editor.py  prompts.py  smart_folder_creator.py  storage.py  template_loader.py  template_mapping.json  trace  trace.2026-04-21
engine/src/default_templates/: advisor_agreement.html  advisor_agreement_preview.html  audit_report.html  audit_report_preview.html  board_minutes.html  board_minutes_preview.html  budget_proposal.html  budget_proposal_preview.html  case_study.html  case_study_preview.html  committee_agenda.html  committee_agenda_preview.html  employee_handbook.html  employee_handbook_preview.html  executive_summary.html  executive_summary_preview.html  expense_report.html  expense_report_preview.html  incident_report.html  incident_report_preview.html  independent_contractor_agreement.html  independent_contractor_agreement_preview.html  invoice.html  invoice_preview.html  job_description.html  job_description_preview.html  letter.html  letter_of_intent.html  letter_of_intent_preview.html  letter_preview.html  master_services_agreement.html  master_services_agreement_preview.html  meeting_minutes.html  meeting_minutes_preview.html  nondisclosure_agreement.html  nondisclosure_agreement_preview.html  offer_letter.html  offer_letter_preview.html  official_memo.html  official_memo_preview.html  (+23 more)
engine/src/editing/: __init__.py  confirmation.py  constants.py  decisions.py  exceptions.py  handlers.py  operations.py  params.py  routes.py  service.py  session_store.py  state_router.py
engine/src/format_prompts/: __init__.py  advisor_agreement.py  audit_report.py  board_minutes.py  budget_proposal.py  case_study.py  committee_agenda.py  contract.py  cover_letter.py  employee_handbook.py  executive_summary.py  expense_report.py  incident_report.py  independent_contractor_agreement.py  invoice.py  job_description.py  letter.py  letter_of_intent.py  master_services_agreement.py  meeting_agenda.py  meeting_minutes.py  nda.py  offer_letter.py  official_memo.py  one_pager.py  pay_stub.py  performance_review.py  press_release.py  price_sheet.py  privacy_policy.py  proposal.py  public_notice.py  purchase_order.py  quote.py  receipt.py  report.py  resume.py  safe_agreement.py  separation_notice.py  service_agreement.py  (+3 more)
engine/src/ledger/: __init__.py  agent.py  deps.py  prompts.py  routes.py
engine/src/models/: __init__.py  briefs.py  chat.py  common.py  file_processing.py  java.py  llm.py  pdf_editor.py  pdf_generator.py  smart_folders.py  tool_models.py
engine/src/stirling/: __init__.py  logging.py
engine/tests/: conftest.py  test_agent_capabilities.py  test_chat_router.py  test_config_cache.py  test_config_contract.py  test_config_routes.py  test_conversational_info.py  test_document_classifier.py  test_document_classifier_routes.py  test_documents.py  test_documents_routes.py  test_engine_auth.py  test_engine_auth_middleware.py  test_env.py  test_form_fill_agent.py  test_model_concurrency.py  test_orchestrator_routing.py  test_pdf_edit_agent.py  test_pdf_question_agent.py  test_pdf_to_markdown.py  test_rag.py  test_rag_routes.py  test_smart_folder_creator.py  test_stirling_api.py  test_stirling_contracts.py  test_summary_agent.py  test_tracking.py  test_user_context.py  test_user_spec_agent.py
engine/tests/agents/: test_chunked_mapper.py  test_chunked_reasoner.py  test_math_presentation.py  test_orchestrator_pdf_comment.py  test_orchestrator_routing.py  test_pdf_create.py  test_pdf_questions_orchestrate.py  test_pdf_review.py  test_whole_doc_reader.py
engine/tests/contradiction/: test_agent.py  test_artifact_union.py  test_capability.py  test_claim_ledger.py  test_combined_intent.py  test_concurrency.py  test_detector.py  test_page_traceability.py  test_question_integration.py  test_review_integration.py  test_review_question_resume.py  test_routes.py
engine/tests/fixtures/: processor_config_push.json
engine/tests/ledger/: test_arithmetic_scanner.py  test_deps.py  test_figure_tracker.py  test_formula_evaluator.py  test_models.py  test_parsing.py  test_routes.py  test_tally_checker.py
engine/tests/pdf_comment/: test_agent.py  test_routes.py
frontend/src-tauri/: .gitignore  Cargo.toml  Info.plist  build-desktop.txt  entitlements.plist  jlink-modules.txt  stirling-pdf.desktop  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  main.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  (+1 more)
pymupdf-worker/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
pymupdf-worker/tests/: test_app.py
scripts/pre-commit/: install-gitleaks.ps1  install-gitleaks.sh  install_gitleaks.py  pyproject.toml  whitespace.py
(+15961 files in other folders)
