[project]
name = "stirling-pymupdf-worker"
version = "0.1.0"
description = "Standalone AGPL-3.0 PyMuPDF-backed PDF->Markdown CLI for Stirling PDF"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymupdf_worker"]

[project.scripts]
pymupdf-convert = "pymupdf_worker.convert:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
