[package]
name = "stirling-thumbnail-handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Storage_Streams",
    "Data_Pdf",
    "Foundation",
]

[dependencies]
windows-core = "0.58"
