[package]
name = "stirling-keychain"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "stirling_keychain"

[[bin]]
name = "keychain-helper"
# Not under src/bin/ — root .gitignore ignores every `bin/` path (Eclipse legacy).
path = "src/keychain_helper.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3.5"

[build-dependencies]
cc = "1"
